fix: fixed bugs